--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "uinput"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "uinput"
+path = "src/main.rs"
 
 [dependencies]
+linux-raw-sys = { version = "0.6.4", features = ["ioctl"] }
+nix = { version = "0.29.0", features = ["ioctl"] }
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
+libc = "0.2.155"
+input-linux-sys = "0.9.0"
