Change to work with yaml instead of json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,7 @@
                     "kind": "bin"
                 }
             },
-            "args": ["${workspaceFolder}/data/uinput.json"],
+            "args": ["${workspaceFolder}/data/uinput.yaml"],
             "cwd": "${workspaceFolder}"
         },
         {
