--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ debug = false
 linux-raw-sys = { version = "0.6.4", features = ["ioctl"] }
 nix = { version = "0.29.0", features = ["ioctl", "fs"] }
 serde = { version = "1.0.204", features = ["derive"] }
-serde_json = "1.0.120"
-libc = "0.2.155"
+serde_yaml = "0.9.34"
+# libc = "0.2.155"
 input-linux-sys = "0.9.0"
