--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
-  // "editor.formatOnSave": true,
-  "rust-analyzer.rustfmt.extraArgs": ["--config", "max_width=140"],
+  "rust-analyzer.rustfmt.extraArgs": [
+    "--config",
+    "max_width=140"
+  ],
   "[rust]": {
     "editor.defaultFormatter": "rust-lang.rust-analyzer",
     "editor.formatOnSave": true
