--- a/data/key_events.yaml
+++ b/data/key_events.yaml
@@ -1,4 +1,6 @@
 # Example of usage part with pressing of several keys
+display_width: 1920
+display_height: 1200
 repeats: 2
 program:
   # Press KEY_DOT, wait a little and release it
