--- a/data/mouse_events.yaml
+++ b/data/mouse_events.yaml
@@ -1,4 +1,6 @@
 # Example of usage part with mouse movement and pressing of mouse keys
+display_width: 1920
+display_height: 1200
 repeats: 3
 program:
   - type: key_press_release_event
